--- a/versions.ini
+++ b/versions.ini
@@ -1,3 +1,3 @@
 [Version]
 Number=1.0
-Url=testing
+Url=https://www.dropbox.com/scl/fi/ne4cw6m6j61z3x8pqoypt/xalikozip.zip?rlkey=gyqwayy1hrayp5gg513lbye03&st=c7c8y7vr&dl=1
